mux-compiler/tests/snapshots/lexer_integration__file_lexer__forward_ref.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Test forward referencing: mutual recursion",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "even",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "bool",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: If,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: EqEq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: Bool(
            true,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: Else,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "odd",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Minus,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            1,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "odd",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "bool",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: If,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: EqEq,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: Bool(
            false,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: Else,
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "even",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "n",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Minus,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            1,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "even",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            4,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "odd",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            5,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "even",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            7,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "odd",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Int(
            8,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
]
